--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,12 +1,12 @@
 <div class="header">
     <div class="container">
         <div class="d-flex justify-content-space-between align-items-center flex-sm-direction-column align-items-self-sm-start">
-            <h1 class="mt-sm-3"><a href="../pages/index.html"><img class="logo" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true" alt=""></a></h1>
-            <ul class="d-flex align-items-center py-25 flex-sm-wrap">
-                <li class="me-16"><a class="fs-5 fs-sm-4 text-white" href="../pages/optical.html">系列鏡框</a></li>
-                <li class="me-16"><a class="fs-5 fs-sm-4 text-white" href="../pages/address.html">門市據點</a></li>
-                <li class="me-16"><a class="fs-5 fs-sm-4 text-white" href="../pages/blog.html">部落格</a></li>
-                <li><a class="fs-5 fs-sm-4 text-white" href="../pages/question.html">常見問題</a></li>
+            <h1 class="mt-sm-3"><a href="../index.html"><img class="logo" src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/logo-white.png?raw=true" alt=""></a></h1>
+            <ul class="d-flex align-items-center  flex-sm-wrap">
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../optical.html">系列鏡框</a></li>
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../address.html">門市據點</a></li>
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../blog.html">部落格</a></li>
+                <li><a class="d-block py-25 ps-8 pe-8 fs-5 fs-sm-4 text-white" href="../question.html">常見問題</a></li>
             </ul>
         </div>
     </div>
