--- a/assets/scss/_utilities.scss
+++ b/assets/scss/_utilities.scss
@@ -185,6 +185,10 @@
     height: 100px;
   }
 
+  .h-100 {
+    height: 100%;
+  }
+
 
   @media(max-width: 1296px){
     .container {
@@ -407,6 +411,22 @@
 
   .ps-4 {
     padding-left: 16px;
+  }
+
+  .ps-8 {
+    padding-left: 32px;
+  }
+
+  .ps-6 {
+    padding-left: 24px;
+  }
+
+  .pe-8 {
+    padding-right: 32px;
+  }
+
+  .pe-6 {
+    padding-right: 24px;
   }
 
   .p {
