--- a/assets/scss/pages/_newCollection.scss
+++ b/assets/scss/pages/_newCollection.scss
@@ -27,10 +27,12 @@
                 background-image: url(https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/product-header-4.png?raw=true);
             }
         }
-        @media (max-width:992px){
+        @media (max-width:1280px) {
             a {
                 padding: 16px 48px;
             }
+        }
+        @media (max-width:992px){
             .container {
                 padding-right: 0;
                 padding-left: 0;
