--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -2,17 +2,17 @@
     <div class="container">
         <div class="d-flex justify-content-space-between pt-12 pt-sm-6">
             <ul class="d-flex align-items-center d-sm-none">
-                <li class="me-12"><a href="../pages/index.html">首頁</a></li>
-                <li class="me-12"><a href="../pages/optical.html">系列鏡框</a></li>
-                <li class="me-12"><a href="../pages/address.html">門市據點</a></li>
-                <li class="me-12"><a href="../pages/blog.html">部落格</a></li>
-                <li ><a href="../pages/question.html">常見問題</a></li>
+                <li><a class="d-block pe-6" href="../index.html">首頁</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../optical.html">系列鏡框</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../address.html">門市據點</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../blog.html">部落格</a></li>
+                <li><a class="ps-6 d-block pe-6" href="../question.html">常見問題</a></li>
             </ul>
             <ul class="d-sm-block d-none">
-                <li><a class="mb-sm-2 d-flex align-items-center" href=""> <span class="material-symbols-rounded me-5">
+                <li><a class="mb-sm-2 d-flex align-items-center"  href="tel:0800-000-000"> <span class="material-symbols-rounded me-5">
                     call
                     </span> 0800-000-000</a></li>
-                <li><a class=" d-flex align-items-center" href=""><span class="material-symbols-rounded  me-5">
+                <li><a class=" d-flex align-items-center" href="mailto:glasses@business.com"><span class="material-symbols-rounded  me-5">
                     mail
                     </span> glasses@business.com</a></li>
             </ul>
@@ -35,8 +35,8 @@
         <div class="align-items-self-sm-start flex-sm-direction-column  d-flex justify-content-space-between border-white align-items-center mt-8 mt-sm-6">
             <p class="text-white fs-3-5 fs-sm-4 pt-8 pt-sm-4 mb-sm-2">Copyright © 2020 Glasses.All rights reserved.</p>
             <ul class="d-flex pt-8 pt-sm-0 pt-sm-4 flex-sm-direction-column">
-                <li class="me-12 fs-3-5 fs-sm-4 mb-sm-2"><a href="">隱私權政策</a></li>
-                <li class="fs-3-5 fs-sm-4"><a href="">服務條款</a></li>
+                <li class="fs-3-5 fs-sm-4 mb-sm-2"><a class="pe-6 ps-6" href="">隱私權政策</a></li>
+                <li class="fs-3-5 fs-sm-4"><a class=" ps-6" href="">服務條款</a></li>
             </ul>
         </div>
     </div>
